--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,24 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.js",
   "type": "module",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.41",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.6.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
-    "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.2.1",
+    "nodemon": "^3.1.0"
   }
 }
