--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: pehlahath-frontend
     env: node
-    buildCommand: cd frontend && npm install
-    startCommand: cd frontend && npm run build && npm run preview
+    buildCommand: cd frontend && npm install && npm run build
+    startCommand: cd frontend && npm run preview
     envVars:
       - key: NODE_ENV
         value: production
